Opened 9 years ago
Closed 8 years ago
#6990 closed defect (fixed)
Encoding with h264_amf is corrupted when using d3d11va hwaccel and d3d11 as hardware output format
| Reported by: | James | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | d3d11 amf |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
http://samples.ffmpeg.org/benchmark/testsuite1/matrixbench_mpeg2.mpg
./ffmpeg -hwaccel d3d11va -hwaccel_output_format d3d11 -i matrixbench_mpeg2.mpg -an -c:v h264_amf out.mkv
The above produces a stream with tons of stutter, and a different result each time (varying checksum).
Using nv12 instead as output format fixes it.
I'm using an HD7950 on Windows 10 x64 (version 1709, Fall Creators build), driver version 17.12.1
I don't know if this also happens with other GPU vendors as i can't test, and of course software encoders will not accept d3d11 pixfmt as input.
Change History (3)
comment:1 by , 9 years ago
| Keywords: | amf added |
|---|---|
| Summary: | Encoding is corrupted when using d3d11va hwaccel and d3d11 as hardware output format → Encoding with h264_amf is corrupted when using d3d11va hwaccel and d3d11 as hardware output format |
comment:2 by , 9 years ago
| Reproduced by developer: | set |
|---|---|
| Status: | new → open |
comment:3 by , 8 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



h264_nvenc seems to work fine, so changing this into an AMF bug.