lavc/amfenc: Retain a reference to D3D frames used as input during the encoding process

Fixes ticket #6990.

Tested-by: James Almer <jamrial@gmail.com>
Reviewed-by: Mark Thompson <sw@jkqxz.net>